tests/slice_of_unknown_type/error.txt
Validation error: ./tests/slice_of_unknown_type/slice_of_unknown_type.fae:2
 No symbol `abc` in the current scope
  2|     name: []abc
                 ^^^
